@@ -1,10 +1,13 @@
 ---------------------------------------------------------------------------------------------------
 Version: 1.3.0
 Date: 2020-01-30
+  Features:
+    - Added custom logistic request GUI (control+select a logistics item to access it)
   Changes:
     - Significantly optimised search logic
     - Improved GUI navigation. Pressing escape while selecting a result with keyboard shortcuts will return to the search bar. Pressing escape again will close the GUI
   Bugfixes:
+    - Fixed that the mod would continue to track your items forever if you canceled a temporary logistics request
     - Fixed more issues with the translation module duplicating keys
     - Fixed a crash if a multiplayer save were to be upgraded from 1.1.0 while other players had the GUI open
 
